--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "solidity",
     "javascript"
   ],
-  "author": "Nikhil Gautam",
+  "author": "Ashok Singh",
   "license": "MIT",
   "devDependencies": {
     "@nomicfoundation/hardhat-toolbox": "^5.0.0",
